public/js/form.js
form = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = [],
        peg$c3 = function(i, o, f) {
                                                          var start_ = [];
                                                          if(i) start_ = start_.concat(i);
                                                          if(o) start_ = start_.concat(o);
                                                          if(f) start_ = start_.concat(f);
                                                          return start_.join('');
                                                        },
        peg$c4 = function(i) { return tag("h1", i); },
        peg$c5 = function(l, w, h) {
                                                          var options_ = [];
                                                          if(l) options_ = options_.concat(l);
                                                          size = css(w, h);
                                                          options_ = options_.concat(size);
                                                          return options_.join('');
                                                        },
        peg$c6 = function(p, v) { return img(p, 30, 30, v); },
        peg$c7 = function(n) { return n; },
        peg$c8 = function(w) { return w; },
        peg$c9 = function(l) { return l; },
        peg$c10 = function(t) { return t; },
        peg$c11 = function(e) { return e; },
        peg$c12 = function(d) { return d; },
        peg$c13 = function(r) { return r; },
        peg$c14 = function(p) { return p; },
        peg$c15 = function(c) { return c; },
        peg$c16 = function(b) { return b; },
        peg$c17 = function(f) { return '<form>' + f.join('') + '</form>'; },
        peg$c18 = function() { return form_("whiteline", "", "", ""); },
        peg$c19 = function() { return form_("line", "", "", ""); },
        peg$c20 = function(l, i, v) { return form_("text", l, i, v); },
        peg$c21 = function(l, i, v) { return form_("checkbox", l, i, v); },
        peg$c22 = function(l, i, v) { return form_("radio", l, i, v); },
        peg$c23 = function(l, i, v) { return form_("password", l, i, v); },
        peg$c24 = function(l, i, v) { return form_("email", l, i, v); },
        peg$c25 = function(l, i, v) { return form_("tel", l, i, v); },
        peg$c26 = function(l, i, v) { return form_("date", l, i, v); },
        peg$c27 = function(l, i, v) { return form_("range", l, i, v); },
        peg$c28 = function(v) { return form_("label", "","",v); },
        peg$c29 = function(l, i) { return form_("button", l, i, ""); },
        peg$c30 = /^[ \t\n\r]/,
        peg$c31 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c32 = "=",
        peg$c33 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c34 = ".",
        peg$c35 = { type: "literal", value: ".", description: "\".\"" },
        peg$c36 = ";",
        peg$c37 = { type: "literal", value: ";", description: "\";\"" },
        peg$c38 = /^[a-zA-Z_]/,
        peg$c39 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c40 = /^[a-zA-Z_0-9]/,
        peg$c41 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c42 = function(id) { return id; },
        peg$c43 = /^[0-9]/,
        peg$c44 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c45 = function(digits) { return parseInt(digits, 10); },
        peg$c46 = /^["]/,
        peg$c47 = { type: "class", value: "[\"]", description: "[\"]" },
        peg$c48 = /^[\/]/,
        peg$c49 = { type: "class", value: "[\\/]", description: "[\\/]" },
        peg$c50 = /^[a-zA-Z0-9\/]/,
        peg$c51 = { type: "class", value: "[a-zA-Z0-9\\/]", description: "[a-zA-Z0-9\\/]" },
        peg$c52 = { type: "any", description: "any character" },
        peg$c53 = function(path) { return path; },
        peg$c54 = /^[a-zA-Z0-9\-_ ]/,
        peg$c55 = { type: "class", value: "[a-zA-Z0-9\\-_ ]", description: "[a-zA-Z0-9\\-_ ]" },
        peg$c56 = function(val) { return val; },
        peg$c57 = /^[a-zA-Z_0-9.\-]/,
        peg$c58 = { type: "class", value: "[a-zA-Z_0-9.\\-]", description: "[a-zA-Z_0-9.\\-]" },
        peg$c59 = /^[@]/,
        peg$c60 = { type: "class", value: "[@]", description: "[@]" },
        peg$c61 = /^[a-zA-Z]/,
        peg$c62 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c63 = function(email) { return email; },
        peg$c64 = /^[0-9 ]/,
        peg$c65 = { type: "class", value: "[0-9 ]", description: "[0-9 ]" },
        peg$c66 = function(tlf) { return tlf; },
        peg$c67 = "begin",
        peg$c68 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c69 = "BEGIN",
        peg$c70 = { type: "literal", value: "BEGIN", description: "\"BEGIN\"" },
        peg$c71 = "end",
        peg$c72 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c73 = "END",
        peg$c74 = { type: "literal", value: "END", description: "\"END\"" },
        peg$c75 = "head",
        peg$c76 = { type: "literal", value: "head", description: "\"head\"" },
        peg$c77 = "HEAD",
        peg$c78 = { type: "literal", value: "HEAD", description: "\"HEAD\"" },
        peg$c79 = "options",
        peg$c80 = { type: "literal", value: "options", description: "\"options\"" },
        peg$c81 = "OPTIONS",
        peg$c82 = { type: "literal", value: "OPTIONS", description: "\"OPTIONS\"" },
        peg$c83 = "logo",
        peg$c84 = { type: "literal", value: "logo", description: "\"logo\"" },
        peg$c85 = "LOGO",
        peg$c86 = { type: "literal", value: "LOGO", description: "\"LOGO\"" },
        peg$c87 = "width",
        peg$c88 = { type: "literal", value: "width", description: "\"width\"" },
        peg$c89 = "WIDTH",
        peg$c90 = { type: "literal", value: "WIDTH", description: "\"WIDTH\"" },
        peg$c91 = "height",
        peg$c92 = { type: "literal", value: "height", description: "\"height\"" },
        peg$c93 = "HEIGHT",
        peg$c94 = { type: "literal", value: "HEIGHT", description: "\"HEIGHT\"" },
        peg$c95 = "form",
        peg$c96 = { type: "literal", value: "form", description: "\"form\"" },
        peg$c97 = "FORM",
        peg$c98 = { type: "literal", value: "FORM", description: "\"FORM\"" },
        peg$c99 = ":",
        peg$c100 = { type: "literal", value: ":", description: "\":\"" },
        peg$c101 = "-",
        peg$c102 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c103 = "txt",
        peg$c104 = { type: "literal", value: "txt", description: "\"txt\"" },
        peg$c105 = "TXT",
        peg$c106 = { type: "literal", value: "TXT", description: "\"TXT\"" },
        peg$c107 = "chx",
        peg$c108 = { type: "literal", value: "chx", description: "\"chx\"" },
        peg$c109 = "CHX",
        peg$c110 = { type: "literal", value: "CHX", description: "\"CHX\"" },
        peg$c111 = "rbt",
        peg$c112 = { type: "literal", value: "rbt", description: "\"rbt\"" },
        peg$c113 = "RBT",
        peg$c114 = { type: "literal", value: "RBT", description: "\"RBT\"" },
        peg$c115 = "pwd",
        peg$c116 = { type: "literal", value: "pwd", description: "\"pwd\"" },
        peg$c117 = "PWD",
        peg$c118 = { type: "literal", value: "PWD", description: "\"PWD\"" },
        peg$c119 = "email",
        peg$c120 = { type: "literal", value: "email", description: "\"email\"" },
        peg$c121 = "EMAIL",
        peg$c122 = { type: "literal", value: "EMAIL", description: "\"EMAIL\"" },
        peg$c123 = "tel",
        peg$c124 = { type: "literal", value: "tel", description: "\"tel\"" },
        peg$c125 = "TEL",
        peg$c126 = { type: "literal", value: "TEL", description: "\"TEL\"" },
        peg$c127 = "dat",
        peg$c128 = { type: "literal", value: "dat", description: "\"dat\"" },
        peg$c129 = "DAT",
        peg$c130 = { type: "literal", value: "DAT", description: "\"DAT\"" },
        peg$c131 = "rag",
        peg$c132 = { type: "literal", value: "rag", description: "\"rag\"" },
        peg$c133 = "RAG",
        peg$c134 = { type: "literal", value: "RAG", description: "\"RAG\"" },
        peg$c135 = "lbl",
        peg$c136 = { type: "literal", value: "lbl", description: "\"lbl\"" },
        peg$c137 = "LBL",
        peg$c138 = { type: "literal", value: "LBL", description: "\"LBL\"" },
        peg$c139 = "btn",
        peg$c140 = { type: "literal", value: "btn", description: "\"btn\"" },
        peg$c141 = "BTN",
        peg$c142 = { type: "literal", value: "BTN", description: "\"BTN\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseBEGIN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseinitialize();
        if (s2 === peg$FAILED) {
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseoptions();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseform();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parseform();
              }
            } else {
              s4 = peg$c0;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseEND();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseDOT();
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c3(s2, s3, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseinitialize() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseHEAD();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseoptions() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseOPTIONS();
      if (s1 !== peg$FAILED) {
        s2 = peg$parselogo();
        if (s2 === peg$FAILED) {
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsewidth();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseheight();
            if (s4 === peg$FAILED) {
              s4 = peg$c1;
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c5(s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parselogo() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseLOGO();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePATH();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseVALUE();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c6(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsewidth() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseWIDTH();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseheight() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseHEIGHT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseform() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseFORM();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsewhiteline();
        if (s4 !== peg$FAILED) {
          peg$reportedPos = s3;
          s4 = peg$c8(s4);
        }
        s3 = s4;
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parseline();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c9(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parsetextbox();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c10(s4);
            }
            s3 = s4;
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              s4 = peg$parseemail();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c11(s4);
              }
              s3 = s4;
              if (s3 === peg$FAILED) {
                s3 = peg$currPos;
                s4 = peg$parsetel();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s3;
                  s4 = peg$c10(s4);
                }
                s3 = s4;
                if (s3 === peg$FAILED) {
                  s3 = peg$currPos;
                  s4 = peg$parsedate();
                  if (s4 !== peg$FAILED) {
                    peg$reportedPos = s3;
                    s4 = peg$c12(s4);
                  }
                  s3 = s4;
                  if (s3 === peg$FAILED) {
                    s3 = peg$currPos;
                    s4 = peg$parserange();
                    if (s4 !== peg$FAILED) {
                      peg$reportedPos = s3;
                      s4 = peg$c13(s4);
                    }
                    s3 = s4;
                    if (s3 === peg$FAILED) {
                      s3 = peg$currPos;
                      s4 = peg$parsepassword();
                      if (s4 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c14(s4);
                      }
                      s3 = s4;
                      if (s3 === peg$FAILED) {
                        s3 = peg$currPos;
                        s4 = peg$parsecheckbox();
                        if (s4 !== peg$FAILED) {
                          peg$reportedPos = s3;
                          s4 = peg$c15(s4);
                        }
                        s3 = s4;
                        if (s3 === peg$FAILED) {
                          s3 = peg$currPos;
                          s4 = peg$parseradiobutton();
                          if (s4 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c13(s4);
                          }
                          s3 = s4;
                          if (s3 === peg$FAILED) {
                            s3 = peg$currPos;
                            s4 = peg$parselabel();
                            if (s4 !== peg$FAILED) {
                              peg$reportedPos = s3;
                              s4 = peg$c9(s4);
                            }
                            s3 = s4;
                            if (s3 === peg$FAILED) {
                              s3 = peg$currPos;
                              s4 = peg$parsebutton();
                              if (s4 !== peg$FAILED) {
                                peg$reportedPos = s3;
                                s4 = peg$c16(s4);
                              }
                              s3 = s4;
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsewhiteline();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c8(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parseline();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c9(s4);
            }
            s3 = s4;
            if (s3 === peg$FAILED) {
              s3 = peg$currPos;
              s4 = peg$parsetextbox();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s3;
                s4 = peg$c10(s4);
              }
              s3 = s4;
              if (s3 === peg$FAILED) {
                s3 = peg$currPos;
                s4 = peg$parseemail();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s3;
                  s4 = peg$c11(s4);
                }
                s3 = s4;
                if (s3 === peg$FAILED) {
                  s3 = peg$currPos;
                  s4 = peg$parsetel();
                  if (s4 !== peg$FAILED) {
                    peg$reportedPos = s3;
                    s4 = peg$c10(s4);
                  }
                  s3 = s4;
                  if (s3 === peg$FAILED) {
                    s3 = peg$currPos;
                    s4 = peg$parsedate();
                    if (s4 !== peg$FAILED) {
                      peg$reportedPos = s3;
                      s4 = peg$c12(s4);
                    }
                    s3 = s4;
                    if (s3 === peg$FAILED) {
                      s3 = peg$currPos;
                      s4 = peg$parserange();
                      if (s4 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c13(s4);
                      }
                      s3 = s4;
                      if (s3 === peg$FAILED) {
                        s3 = peg$currPos;
                        s4 = peg$parsepassword();
                        if (s4 !== peg$FAILED) {
                          peg$reportedPos = s3;
                          s4 = peg$c14(s4);
                        }
                        s3 = s4;
                        if (s3 === peg$FAILED) {
                          s3 = peg$currPos;
                          s4 = peg$parsecheckbox();
                          if (s4 !== peg$FAILED) {
                            peg$reportedPos = s3;
                            s4 = peg$c15(s4);
                          }
                          s3 = s4;
                          if (s3 === peg$FAILED) {
                            s3 = peg$currPos;
                            s4 = peg$parseradiobutton();
                            if (s4 !== peg$FAILED) {
                              peg$reportedPos = s3;
                              s4 = peg$c13(s4);
                            }
                            s3 = s4;
                            if (s3 === peg$FAILED) {
                              s3 = peg$currPos;
                              s4 = peg$parselabel();
                              if (s4 !== peg$FAILED) {
                                peg$reportedPos = s3;
                                s4 = peg$c9(s4);
                              }
                              s3 = s4;
                              if (s3 === peg$FAILED) {
                                s3 = peg$currPos;
                                s4 = peg$parsebutton();
                                if (s4 !== peg$FAILED) {
                                  peg$reportedPos = s3;
                                  s4 = peg$c16(s4);
                                }
                                s3 = s4;
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c17(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsewhiteline() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseWHITELINE();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c18();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseline() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseLINE();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c19();
      }
      s0 = s1;

      return s0;
    }

    function peg$parsetextbox() {
      var s0, s1, s2, s3, s4, s5;
